--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,7 +1,6 @@
-/* Font imports */
+/* Colors */
+/* Breakpoints */
 @import url("https://fonts.googleapis.com/css?family=Reem+Kufi|Source+Sans+Pro");
-/* Should we move to SASS??? */
-/* CSS Resets */
 html,
 body {
   font-family: "Source Sans Pro", Helvetica, Arial, sans-serif;
@@ -9,13 +8,10 @@ body {
   margin: 0;
   padding: 0; }
 
-/* Other global styles */
 h1,
 h2,
 h3,
 h4 {
   font-family: "Reem Kufi", Helvetica, Arial, sans-serif; }
-
-/* Hero */
 
 /*# sourceMappingURL=stylesheet.css.map */
