--- a/scss/base.scss
+++ b/scss/base.scss
@@ -16,3 +16,10 @@ h3,
 h4 {
   font-family: "Reem Kufi", Helvetica, Arial, sans-serif;
 }
+// Todo: externalize these into different files
+// Hero
+.sd-hero {
+  color: white;
+  background-color: $PURPLE_1;
+}
+// Button styles
