--- a/scss/base.scss
+++ b/scss/base.scss
@@ -41,10 +41,12 @@ h4 {
   text-align: center;
   color: white;
   background-color: $PURPLE_1;
-  height: 100vh;
+  height: 120vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
+  margin-bottom: 10em;
 
   &--title {
     font-size: 72px;
@@ -66,6 +68,8 @@ h4 {
 
 // Overall styles
 .sd-section {
+  margin-top: 75px;
+  
   &--header {
     font-size: 54px;
     letter-spacing: 1.5px;
@@ -108,8 +112,33 @@ h4 {
 }
 // Hexagon stuff
 .sd-hextion {
-  background-color: $PURPLE_1;
+  height: 1100px;
+  width: 440px;
   color: white;
+  background: url("../images/side-hexagons.svg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  
+  &--shifted {
+    margin-top: -250px;
+    margin-bottom: -250px;
+  }
+
+  &--left {
+    background-position: -595px 0;
+  }
+
+  &--content {
+    margin: 35px 45px 0;
+    p {
+      font-size: 1.8em;
+    }
+  }
+
+  &--header {
+    text-align: center;
+    font-size: 1.8em;
+  }
 }
 .sd-hex {
   background: url("../images/hexagon_rounded.svg");
@@ -121,11 +150,13 @@ h4 {
   flex-direction: column;
   justify-content: center;
   color: white;
+  margin: 0 auto;
 
   &--unbordered {
     background: url("../images/hexagon_unbordered.svg");
     background-size: cover;
   }
+
   h2 {
     font-size: 96px;
     line-height: 86px;
@@ -138,5 +169,34 @@ h4 {
 }
 // Footer
 .sd-footer {
-  background-color: $PURPLE_1;
+  position: relative;
+  height: 350px;
+  margin-top: -250px;
+  padding-top: 250px;
+
+  &--background {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+
+    background-color: $PURPLE_1;
+    clip-path: polygon(0 100%, 100% 0, 100% 100%, 0 100%);
+  }
+
+  &--hex {
+    background-image: url("../images/logo.png");
+    background-size: cover;
+    height: 246px;
+    width: 225px;
+    position: absolute;
+    top: -40px;
+    right: 50px;
+  }
+
+  &--info {
+    height: 50px;
+  }
 }
