--- a/scss/globals.scss
+++ b/scss/globals.scss
@@ -33,11 +33,20 @@
   // Note breakpoints are the upper bound of each device size
   // Usage: @media screen and (max-width: $BP_WHATEVER) { }
 
+  /* Foundation 6 default breakpoints 
+   * $breakpoints: (
+   *   small: 0px,
+   *   medium: 640px,
+   *   large: 1024px,
+   *   xlarge: 1200px,
+   *   xxlarge: 1440px,
+   * );
+   */
   // Tablet width upper bound
-  $BP_TABLET: 960px;
+  $BP_TABLET: 1024;
 
   // Mobile device width upper bound
-  $BP_MOBILE: 650px;
+  $BP_MOBILE: 640px;
 
   // Small desktop width upper bound (ie laptops)
   $BP_DESKTOP: 1200px;
