--- a/scss/globals.scss
+++ b/scss/globals.scss
@@ -43,10 +43,10 @@
    * );
    */
   // Tablet width upper bound
-  $BP_TABLET: 1024;
+  $BP_LG: 1024px;
 
   // Mobile device width upper bound
-  $BP_MOBILE: 640px;
+  $BP_MD: 640px;
 
   // Small desktop width upper bound (ie laptops)
-  $BP_DESKTOP: 1200px;
+  $BP_XL: 1200px;
