--- a/scss/globals.scss
+++ b/scss/globals.scss
@@ -18,6 +18,9 @@
   // The light purple in "Resources" section
   $PURPLE_2: #8D6CAB;
 
+  // A cool purple I found (darker), currently unused
+  $PURPLE_3: #332541;
+
   // Gray used for text in mockup
   $GRAY_1: #666666;
 
