--- a/scss/base.scss
+++ b/scss/base.scss
@@ -155,6 +155,10 @@ h4 {
     font-size: 54px;
     letter-spacing: 1.5px;
     color: $BLUE_1;
+
+    @media screen and (max-width: $BP_MD) {
+      margin-top: 50px;
+    }
   }
   &--subheader {
     font-size: 36px;
@@ -224,16 +228,27 @@ h4 {
   background-repeat: no-repeat;
   z-index: 1;
 
+  @media screen and (max-width: $BP_MD) {
+    background: $PURPLE_1;
+    height: auto;
+    padding-bottom: 50px;
+    padding-top: 50px;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    clip-path: polygon(0 10%, 100% 0, 100% 90%, 0 100%);
+  }
 
   &--shifted {
     margin-top: -250px;
     margin-bottom: -250px;
 
     @media screen and (max-width: $BP_MD) {
-      margin-top: -100px;
-      margin-bottom: -100px;
+      margin-top: 0;
+      margin-bottom: 0;
+      // margin-top: -100px;
+      // margin-bottom: -100px;
       // Remove soft corner
-      background-position: -30px 0;
+      // background-position: -30px 0;
     }
   }
   &--right {
@@ -361,4 +376,47 @@ h4 {
 }
 .sd-z1 {
   z-index: 1;
+}
+.tesc-logo {
+  width: 12rem;
+  margin: auto;
+  display: block;
+}
+.sd-nav {
+  &--list {
+    list-style-type: none;
+    line-height: 40px;
+    margin: 0;
+
+    li {
+      padding-left: 0;
+      display: inline-block;
+      padding: 10px 14px;
+    }
+    &>a {
+      color: inherit;
+    }
+  }
+  &--fixed {
+    background-color: $WHITE;
+    // background: linear-gradient(rgba(255, 255, 255, 1), rgba(255, 255, 255, 0.7));
+    color: $PURPLE_1;
+    position: fixed;
+    width: 100%;
+    top: 0;
+    z-index: 2;
+    text-align: right;
+  }
+  &--static {
+    color: white;
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: 1;
+  }
+  .sd-button {
+    width: 150px;
+    font-size: inherit;
+    margin-bottom: 0;
+  }
 }
