--- a/scss/pages/_header.scss
+++ b/scss/pages/_header.scss
@@ -1,4 +1,6 @@
 .sd-nav {
+  box-shadow: 0px 4px 8px $PURPLE_1;
+
   .row {
     @media screen and (min-width: $BP_XL) {
       padding-left: 6rem;
@@ -79,4 +81,155 @@
     font-size: inherit;
     margin-bottom: 0;
   }
+}
+
+/* Defines the breakpoint at which the nav will collapse */
+$BP_NAV_COLLAPSE: $BP_MD;
+
+$NAV_SHADOW: 0px 1px 2px rgba(0,0,0,0.35);
+$NAV_BODYBG: $WHITE;
+
+/* Safari requires animations to be loaded before being called. */
+@keyframes header_fadeIn {
+  from { transform: translateY(-100px); }
+  to { transform: translateY(0px); }
+}
+/* Firefox < 16 */
+@-moz-keyframes header_fadeIn {
+  from { transform: translateY(-100px); }
+  to { transform: translateY(0px); }
+}
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes header_fadeIn {
+  from { transform: translateY(-100px); }
+  to { transform: translateY(0px); }
+}
+/* Internet Explorer */
+@-ms-keyframes header_fadeIn {
+  from { transform: translateY(-100px); }
+  to { transform: translateY(0px); }
+}
+/* Opera < 12.1 */
+@-o-keyframes header_fadeIn {
+  from { transform: translateY(-100px); }
+  to { transform: translateY(0px); }
+}
+.mobile-link {
+  cursor: pointer;
+  height: 32px;
+  position: absolute;
+  right: 20px;
+  top: 20px;
+  width: 32px;
+  border: none;
+
+  .mobile-hamburger {
+    border-top: 3px solid;
+    border-color: $PURPLE_1;
+    height: auto;
+    position: relative;
+    transition: all 0.25s;
+    width: 100%;
+    display: inline-block;
+
+    &:before,
+    &:after {
+      border-top: 3px solid;
+      border-color: $PURPLE_1;
+      content: ' ';
+      height: 0;
+      left: 0;
+      position: absolute;
+      right: 0;
+      transition: all 0.25s;
+    }
+    &:before {
+      top: -12px;
+    }
+    &:after {
+      bottom: -9px;
+    }
+  }
+}
+.nav-open {
+  background-color: $WHITE;
+
+  .logo {
+    opacity: 0;
+  }
+  .mobile-link {
+    .mobile-hamburger {
+      border-color: transparent;
+      z-index: 999999;
+
+      &:before,
+      &:after {
+        -webkit-transform-origin: 50% 50%;
+        -ms-transform-origin: 50% 50%;
+        transform-origin: 50% 50%;
+        top: 0;
+      }
+      &:before {
+        transform: rotate3d(0, 0, 1, 45deg);
+      }
+      &:after {
+        transform: rotate3d(0, 0, 1, -45deg);
+      }
+    }
+  }
+  .navigation {
+    opacity: 1;
+    transform: translateY(0px);
+    transition-delay: 0s;
+    visibility: visible;
+
+    li {
+      transform: translateX(0px);
+    }
+  }
+}
+.navigation {
+  background: $NAV_BODYBG;
+  bottom: 0;
+  float: none;
+  left: 0;
+  margin-top: 0px;
+  opacity: 0;
+  padding: 0px 35px;;
+  position: fixed;
+  right: 0;
+  top: 68px;
+  transition: opacity 0.25s, visibility 0s linear 0.5s;
+  visibility: hidden;
+  z-index: 999;
+
+  a {
+    text-decoration: none;
+    border: none;
+  }
+  li a {
+    color: $PURPLE_1;
+    display: block;
+    padding: 20px 0px;
+    font-size: 28px;
+
+    &:focus {
+      outline: none;
+      -webkit-appearance: none;
+      -moz-appearance: none;
+      appearance: none;
+    }
+  }
+  li {
+    display: block;
+    transform: translateX(-10px);
+    transition: opacity 0.25s, transform 0.25s;
+    text-align: right;
+  }
+  .dropdown > a {
+    display: none;
+  }
+}
+.hidden {
+  display: none;
 }
