--- a/scss/pages/_hexagons.scss
+++ b/scss/pages/_hexagons.scss
@@ -24,10 +24,6 @@
     @media screen and (max-width: $BP_MD) {
       margin-top: 0;
       margin-bottom: 0;
-      // margin-top: -100px;
-      // margin-bottom: -100px;
-      // Remove soft corner
-      // background-position: -30px 0;
     }
   }
   &--right {
@@ -38,10 +34,10 @@
     }
   }
   &--left {
-    background-position: -595px 0;
+    background-position: 103% 0;
 
     @media screen and (min-width: $BP_XL) {
-      background-position: -540px 0;
+      background-position: 103% 0;
       position: relative;
       left: -6.2rem;
       padding-left: 35px;
@@ -57,7 +53,7 @@
       margin: 35px 0 0 45px;
     }
     p {
-      font-size: 1.8em;
+      font-size: 26px;
     }
   }
   &--left &--content {
@@ -87,12 +83,21 @@
   color: white;
   margin: 0 auto;
 
+  @media screen and (max-width: $BP_LG) {
+    width: 206px;
+    height: 226px;
+  }
+
   &--unbordered {
     background: url("../images/hexagon_unbordered.svg");
     background-size: cover;
   }
   &--inset {
     margin-top: 100px;
+
+    @media screen and (max-width: $BP_LG) {
+      margin-top: 130px;
+    }
   }
 
   h2 {
@@ -103,5 +108,14 @@
   p {
     font-size: 24px;
     margin: 0;
+  }
+}
+.sd-list-hex {
+  margin-top: 15px;
+  margin-bottom: 20px;
+
+  @media screen and (max-width: $BP_MD) {
+    // width: 274px;
+    // height: 301px;
   }
 }
