--- a/scss/base.scss
+++ b/scss/base.scss
@@ -43,6 +43,7 @@ a {
   padding: 0;
   border-radius: 10px;
   background-color: $BLUE_1;
+  font-family: $REEM_KUFI;
 
   // Override foundation button hover behavior
   &:hover,
@@ -108,6 +109,10 @@ a {
 .sd-list {
   list-style-type: none;
   margin-left: 0;
+
+  &--hoz {
+    display: inline-block;
+  }
 }
 .sd-schedule {
   @media screen and (min-width: $BP_LG) {
@@ -194,13 +199,16 @@ a {
   color: $BLUE_1;
   z-index: 4;
   border: none;
+  display: none;
   text-align: center;
 
   i {
     font-size: 48px;
   }
-  @media screen and (max-width: $BP_XL) {
+  @media screen and (max-width: $BP_MD) {
     color: white;
+  }
+  @media screen and (max-width: $BP_XL) {
     position: absolute;
     bottom: 28px;
     left: 10px;
