--- a/scss/pages/_footer.scss
+++ b/scss/pages/_footer.scss
@@ -16,7 +16,8 @@
     clip-path: polygon(0 100%, 100% 0, 100% 100%, 0 100%);
 
     @media screen and (max-width: $BP_MD) {
-      clip-path: polygon(-50% 100%, 100% 0, 100% 100%, 0 100%);
+      clip-path: polygon(-100% 100%, 100% 0, 100% 100%, 0 100%);
+      height: 125%;
     }
   }
   &--background-helper {
