--- a/scss/pages/_header.scss
+++ b/scss/pages/_header.scss
@@ -36,6 +36,7 @@
     list-style-type: none;
     line-height: 40px;
     margin: 0;
+    font-family: $REEM_KUFI;
 
     li {
       padding-left: 0;
@@ -202,6 +203,7 @@ $NAV_BODYBG: $WHITE;
   transition: opacity 0.25s, visibility 0s linear 0.5s;
   visibility: hidden;
   z-index: 999;
+  font-family: $REEM_KUFI;
 
   a {
     text-decoration: none;
