--- a/scss/globals.scss
+++ b/scss/globals.scss
@@ -32,6 +32,8 @@
 
   $HEADER_COLOR: $BLUE_1;
 
+  $RED_1: #F20044;
+
 /* Breakpoints */
   // Note breakpoints are the upper bound of each device size
   // Usage: @media screen and (max-width: $BP_WHATEVER) { }
