--- a/scss/main.scss
+++ b/scss/main.scss
@@ -9,5 +9,6 @@
 @import './pages/_hexagons';
 @import './pages/_footer';
 @import './pages/_header';
+@import './pages/_updates.scss';
 
 // Custom/mobile
