--- a/scss/pages/_hexagons.scss
+++ b/scss/pages/_hexagons.scss
@@ -1,12 +1,15 @@
 // Hexagon stuff
 .sd-hextion {
   height: 1100px;
-  color: white;
+  color: $WHITE;
   background: url("../images/side-hexagons.svg");
   background-size: cover;
   background-repeat: no-repeat;
   z-index: 1;
 
+  strong {
+    color: $WHITE !important;
+  }
   @media screen and (max-width: $BP_MD) {
     background: $PURPLE_1;
     height: auto;
@@ -63,7 +66,7 @@
       margin: 35px 0 0 45px;
     }
     p {
-      font-size: 26px;
+      font-size: 24px;
     }
   }
   &--left &--content {
@@ -90,7 +93,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  color: white;
+  color: $WHITE;
   margin: 0 auto;
 
   @media screen and (max-width: $BP_LG) {
