--- a/scss/globals.scss
+++ b/scss/globals.scss
@@ -1,5 +1,19 @@
 // For global variables such as colors, fonts, etc.
 
+/* Fonts */
+  // Font imports 
+  @import url('https://fonts.googleapis.com/css?family=Reem+Kufi|Source+Sans+Pro');
+
+  $SOURCE_SANS: "Source Sans Pro", Helvetica, Arial, sans-serif;
+  $REEM_KUFI: "Reem Kufi", Helvetica, Arial, sans-serif;
+
+
+/* Styling */
+
+  // Radius of buttons
+  $BUTTON_RADIUS: 10px;  
+
+
 /* Colors */
   // Usage: .selector { color: $BLUE_1; }
 
