--- a/scss/base.scss
+++ b/scss/base.scss
@@ -246,7 +246,7 @@ a {
   position: fixed;
   bottom: 50px;
   left: 50px;
-  color: $WHITE;
+  color: $BLUE_1;
   z-index: 4;
   border: none;
   display: none;
