--- a/scss/pages/_header.scss
+++ b/scss/pages/_header.scss
@@ -1,5 +1,5 @@
 .sd-nav {
-  box-shadow: 0px 4px 8px $PURPLE_1;
+  border-bottom: 3px solid $PURPLE_1;
 
   .row {
     @media screen and (min-width: $BP_XL) {
@@ -69,9 +69,9 @@
     top: 0;
     z-index: 2;
     text-align: right;
-    -webkit-transition: background-color 0.5s ease; /* Safari */
-    -moz-transition: background-color 0.5s ease; /* Safari */
-    transition: background-color 0.5s ease;
+    -webkit-transition: background-color 0.5s ease, border-bottom 0.5s ease; /* Safari */
+    -moz-transition: background-color 0.5s ease, border-bottom 0.5s ease; /* Safari */
+    transition: background-color 0.5s ease, border-bottom 0.5s ease;
   }
   &--static {
     color: white;
@@ -91,7 +91,6 @@
 /* Defines the breakpoint at which the nav will collapse */
 $BP_NAV_COLLAPSE: $BP_MD;
 
-$NAV_SHADOW: 0px 1px 2px rgba(0,0,0,0.35);
 $NAV_BODYBG: $WHITE;
 
 /* Safari requires animations to be loaded before being called. */
@@ -238,7 +237,7 @@ $NAV_BODYBG: $WHITE;
 }
 .sd-nav--top:not(.nav-open) {
   background-color: transparent;
-  box-shadow: none;
+  border-bottom: none;
 
   .sd-nav--logolink {
     opacity: 0;
