--- a/scss/pages/_footer.scss
+++ b/scss/pages/_footer.scss
@@ -8,14 +8,12 @@
   @media screen and (max-width: $BP_MD) {
     margin-top: -200px;
   }
-
   &--background {
     width: 100%;
     height: 100%;
     position: absolute;
     top: 0;
     left: 0;
-
     background-color: $PURPLE_1;
     clip-path: polygon(0 100%, 101% 0, 101% 100%, 0 100%);
 
@@ -76,6 +74,11 @@
         font-size: 32px;
         border: none;
 
+        &.sd-footer--textlink {
+          font-size: 20px;
+          font: $REEM_KUFI;
+          border-bottom: 2px solid;
+        }
         &:hover {
           color: $BLUE_1;
         }
@@ -83,6 +86,7 @@
     }
   }
 }
+
 .sd-spacer--footer {
   height: 200px;
 }
