Added submit hack button

--- a/scss/pages/_header.scss
+++ b/scss/pages/_header.scss
@@ -81,7 +81,7 @@
     z-index: 1;
   }
   .sd-button {
-    width: 150px;
+    min-width: 150px;
     font-size: inherit;
     margin-bottom: 0;
   }
