--- a/scss/base.scss
+++ b/scss/base.scss
@@ -34,7 +34,7 @@ a {
   font-size: 24px;
   letter-spacing: 1px;
   text-transform: uppercase;
-  padding: 0;
+  padding: 0 16px;
   border-radius: 10px;
   background-color: $BLUE_1;
   font-family: $REEM_KUFI;
@@ -51,6 +51,10 @@ a {
     &.success:focus {
       background-color: lighten($GREEN_1, 10%);
     }
+  }
+  &--unfixed {
+    width: auto;
+    min-width: 216px;
   }
   &--input {
     text-align: left;
