Add main site link

--- a/scss/base.scss
+++ b/scss/base.scss
@@ -36,6 +36,7 @@ a {
   text-transform: uppercase;
   padding: 0 16px;
   border-radius: 10px;
+  border: none;
   background-color: $BLUE_1;
   font-family: $REEM_KUFI;
 
